--- a/style/moodle-rtl.css
+++ b/style/moodle-rtl.css
@@ -10724,10 +10724,6 @@ textarea.path-calendar .maincalendar .cal_courses_flt select {
   width: 16px;
 }
 
-.section .label {
-  text-align: right;
-}
-
 .section .activity {
   /* The command block for each activity */
 }
@@ -10750,6 +10746,7 @@ textarea.path-calendar .maincalendar .cal_courses_flt select {
              * Add appropriate padding such that nothing overlaps the
              * absolute positioned move icon.
              */
+  padding-right: 32px;
 }
 
 .section .activity .actions {
@@ -10760,8 +10757,8 @@ textarea.path-calendar .maincalendar .cal_courses_flt select {
 
 .section .activity .contentwithoutlink,
 .section .activity .activityinstance {
-  display: block;
   min-width: 40%;
+  display: table-cell;
   padding-left: 4px;
   min-height: 2em;
 }
@@ -10770,6 +10767,18 @@ textarea.path-calendar .maincalendar .cal_courses_flt select {
 .section .activity .activityinstance .dimmed img.activityicon {
   opacity: 0.5;
   filter: alpha(opacity=50);
+}
+
+.section .label .contentwithoutlink,
+.section .label .activityinstance {
+  padding-left: 32px;
+  display: block;
+  height: inherit;
+}
+
+.section .label .mod-indent-outer {
+  padding-right: 24px;
+  display: block;
 }
 
 .section .filler {
